--- a/server/package.json
+++ b/server/package.json
@@ -4,7 +4,8 @@
     "cors": "^2.8.5",
     "dotenv": "^16.4.5",
     "express": "^4.21.1",
-    "mongoose": "^8.7.0"
+    "mongoose": "^8.7.0",
+    "nodemon": "^3.1.7"
   },
   "scripts": {
     "dev": "nodemon index.js"
